--- a/views/templates/crud.html
+++ b/views/templates/crud.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRUD Dinâmico - {{.Schema.TableName}}</title>
 
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="/static/js/tailwindcss.js"></script>
 
     </head>
 <body class="bg-gray-100 p-4 md:p-8 font-sans">
@@ -137,7 +137,8 @@
                 </div>
             </div>
 
-        </div> </div> <script src="https://unpkg.com/imask"></script>
+        </div> </div>
+    <script src="/static/js/imask.js"></script>
 
     <script src="/static/js/main.js?v={{.CurrentTime}}"></script>
 
